# Competitive-Programming

CPP/: .gitignore  CMakeLists.txt
CPP/ABC/: 111-B.cpp  117-D.cpp  148-A.cpp
CPP/Codeforces/: R251-D.cpp
CPP/Codeforces/228/: A - Is your horseshoe on the other hoof.cpp
CPP/Codeforces/236/: A - Boy or Girl .cpp
CPP/Codeforces/276/: D - Little Girl and Maximum XOR.cpp  test.cpp
CPP/Codeforces/486/: A - Calculating Function .cpp
CPP/MPC/CONTEST 1/: A-Sum of Round Numbers .cpp  B - Neverending Competitions.cpp  B-Perfect Squares.cpp  C - Elevator.cpp  D - Divisibility.cpp  E - LCM.cpp
CPP/MPC/CONTEST 2/: A - Save Luke.cpp  B - SLA.cpp  C - Pasha and Stick.cpp  D - Best Subsegment .cpp
CPP/MPC/CONTEST 3/: A - Display Size .cpp  B - Modular Exponentiation.cpp  C - Dasha and Stairs.cpp  D - Square Difference.cpp  E - Treasure Hunt .cpp
CPP/MPC/CONTEST 4/: A - C+=.cpp  B - Lunar New Year and Number Division.cpp  C - Fox and Number Game .cpp  E - Maxim Buys an Apartment .cpp
CPP/MPC/CONTEST 5/: A - Floor Number .cpp  B - From Hero to Zero .cpp  C - Round House .cpp  D - Remainder.cpp
CPP/OJ/: 11849 - CD.cpp
