cmake_minimum_required(VERSION 3.31)
project(CPP)

set(CMAKE_CXX_STANDARD 20)

add_executable(CPP ignore/binarySearch.cpp
        ignore/selectionSort.cpp
        ignore/insertionSort.cpp
        ignore/bubbleSort.cpp
        ABC/111-B.cpp
        Codeforce/R251-D.cpp
        ignore/dfs.cpp
        ignore/bfs.cpp
        ignore/tarjan.cpp
        "MPC/CONTEST 1/A-Sum of Round Numbers .cpp"
        "ignore/strongly connected components.cpp"
        "MPC/CONTEST 1/B-Perfect Squares.cpp"
        ignore/tarjan.cpp
        "MPC/CONTEST 1/D - Divisibility.cpp"
        "MPC/CONTEST 1/C - Elevator.cpp"
        "MPC/CONTEST 1/E - LCM.cpp"
        ignore/test.cpp
        "MPC/CONTEST 2/A. Save Luke.cpp"
        "MPC/CONTEST 1/B - Neverending Competitions.cpp"
        "MPC/CONTEST 2/B - SLA.cpp"
        "MPC/CONTEST 2/C - Pasha and Stick.cpp"
        ignore/dijkstra.cpp
        ignore/test.cpp
        ignore/testsla2.cpp
        ignore/fazai.cpp
        ABC/117-D.cpp
        ABC/148-A.cpp
        "MPC/CONTEST 3/B - Modular Exponentiation.cpp"
        "MPC/CONTEST 3/C - Dasha and Stairs.cpp"
        "MPC/CONTEST 3/A - Display Size .cpp"
        ignore/prim.cpp
        "Codeforce/276/D - Little Girl and Maximum XOR.cpp"
        Codeforce/276/test.cpp
        Codeforce/276/test.h
        ignore/kruskal.cpp
        "Codeforce/228/A - Is your horseshoe on the other hoof.cpp"
        "Codeforce/236/A - Boy or Girl .cpp"
        "OJ/11849 - CD.cpp"
        "Codeforce/486/A - Calculating Function .cpp"
        "MPC/CONTEST 4/A - C+=.cpp"
)
